Add APIS project

--- a/css/styles.css
+++ b/css/styles.css
@@ -3929,11 +3929,11 @@ input[type="button"].btn--primary:focus {
 }
 
 .modal-popup__details {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: azure;
     font-size: var(--text-sm);
     line-height: calc(var(--vspace-1_5) - 2px);
     border: 1px solid rgba(255, 255, 255, 0.15);
-    color: white;
+    color: rgb(20, 17, 17);
     border-radius: var(--border-radius);
     padding: 0 1.4rem;
     position: absolute;
