--- a/css/styles.css
+++ b/css/styles.css
@@ -3929,7 +3929,7 @@ input[type="button"].btn--primary:focus {
 }
 
 .modal-popup__details {
-    background-color: azure;
+    background-color: rgb(247, 250, 250);
     font-size: var(--text-sm);
     line-height: calc(var(--vspace-1_5) - 2px);
     border: 1px solid rgba(255, 255, 255, 0.15);
